--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
 
     <application
@@ -14,9 +15,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.NotesSQLite"
         tools:targetApi="31">
+        <activity
+            android:name=".user_passwords.PasswordActivity"
+            android:exported="true">
+
+        </activity>
+
         <receiver
             android:name=".todo.NotificationManager"
-            android:enabled="true"/>
+            android:enabled="true" />
 
         <activity
             android:name=".todo.ToDoFragment"
