--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,14 +16,16 @@
         android:theme="@style/Theme.NotesSQLite"
         tools:targetApi="31">
         <activity
+            android:name=".RiggedActivity"
+            android:exported="false" />
+        <activity
             android:name=".user_passwords.PasswordActivity"
-            android:exported="true">
-
-        </activity>
+            android:exported="true"></activity>
 
         <receiver
             android:name=".todo.NotificationAlarmReceiver"
             android:enabled="false" />
+
         <activity
             android:name=".notes.UpdateNoteActivity"
             android:exported="false" />
@@ -31,9 +33,8 @@
             android:name=".notes.AddNoteActivity"
             android:exported="false" />
         <activity
-            android:name=".categories.CategoryViewActivity"
+            android:name=".categories.categoryviews.ViewNotesInFolder"
             android:exported="false" />
-
         <activity
             android:name=".MainActivity"
             android:exported="true">
