--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
@@ -14,7 +14,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.NotesSQLite"
-        tools:targetApi="31" >
+        tools:targetApi="31">
+        <activity
+            android:name=".UpdateRelationshipActivity"
+            android:exported="false"
+            android:theme="@style/Theme.NotesSQLite" />
+        <activity
+            android:name=".relationships.AddRelationshipActivity"
+            android:exported="false"
+            android:theme="@style/Theme.NotesSQLite" />
         <activity
             android:name=".user_passwords.UserConfirmation"
             android:exported="false" />
@@ -41,12 +49,14 @@
         <activity
             android:name=".categories.categoryviews.ViewNotesInFolder"
             android:exported="false" />
+        <activity android:name=".categories.categoryviews.NotesInFolder"
+            android:exported="false"/>
         <activity
             android:name=".todo.DummyActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
