--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,22 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.NotesSQLite"
         android:targetSdkVersion="33"
+        android:theme="@style/Theme.NotesSQLite"
         tools:targetApi="33">
+        <activity
+            android:name=".HomePage"
+            android:exported="true"
+            android:label="@string/title_activity_home_page"
+            android:theme="@style/Theme.NotesSQLite">
+
+        </activity>
+        <activity
+            android:name=".UpdateBirthdayActivity"
+            android:exported="false" />
+        <activity
+            android:name=".AddBirthdayActivity"
+            android:exported="false" />
         <activity
             android:name=".relationships.RelationshipStatusHintActivity"
             android:exported="false"
