--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,18 +11,20 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:restoreAnyVersion="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:targetSdkVersion="33"
         android:theme="@style/Theme.NotesSQLite"
         tools:targetApi="33">
         <activity
+            android:name=".LoadingActivity"
+            android:exported="false" />
+        <activity
             android:name=".HomePage"
             android:exported="true"
             android:label="@string/title_activity_home_page"
-            android:theme="@style/Theme.NotesSQLite">
-
-        </activity>
+            android:theme="@style/Theme.NotesSQLite"></activity>
         <activity
             android:name=".UpdateBirthdayActivity"
             android:exported="false" />
