Updated Note UI and splash screens

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
@@ -16,11 +16,13 @@
         android:supportsRtl="true"
         android:targetSdkVersion="33"
         android:theme="@style/Theme.NotesSQLite"
-        tools:targetApi="33">
+        tools:targetApi="33" >
+        <activity
+            android:name=".notes.SplashActivity"
+            android:exported="false" />
         <activity
             android:name=".notes.LoadingActivity"
             android:exported="false" />
-
         <activity
             android:name=".birthdays.UpdateBirthdayActivity"
             android:exported="false" />
@@ -66,7 +68,7 @@
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
